--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "sonner": "^1.1.0",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
