--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.43.0",
-    "axios": "^1.5.1",
+    "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "mapbox-gl": "^2.15.0",
     "moment": "^2.29.4",
@@ -26,6 +26,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "sonner": "^1.2.0",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
