--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.1.0",
     "use-places-autocomplete": "^4.0.1",
