--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.43.0",
-    "axios": "^1.6.0",
+    "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "mapbox-gl": "^2.15.0",
     "moment": "^2.29.4",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
