--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,10 +19,10 @@
     "framer-motion": "^10.16.4",
     "mapbox-gl": "^2.15.0",
     "moment": "^2.29.4",
-    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-map-gl": "^7.1.6",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
