--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.6",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
