--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "apexcharts": "^3.43.0",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "luxon": "^3.4.4",
     "mapbox-gl": "^2.15.0",
-    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
@@ -32,6 +33,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2",
     "sonner": "^1.1.0",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
